--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
                     <h2> HARD SKILLS : </h2>
                     <ul>
                         <li>
+                            <p>C# (Unity et Monogame)</p>
+                        </li>
+                        <li>
+                            <p>Blueprint Unreal Engine 5</p>
+                        </li>
+                        <li>
                             <p>Python</p>
                         </li>
                         <li>
@@ -139,9 +145,6 @@
                             <p>JavaScript</p>
                         </li>
                         <li>
-                            <p>C# (Unity et Monogame)</p>
-                        </li>
-                        <li>
                             <p>OBS Studio</p>
                         </li>
                     </ul>
@@ -151,9 +154,7 @@
         <div class="actus" id="actus">
             <h1>Quelques actualités :</h1>
             <div class="liste_actus">
-                <p class="actus"> Je suis à la recherche urgente d'un contrat d'alternance dans le milieu du jeu vidéo
-                    pour
-                    l'année 2024/2025</p>
+                <p class="actus"> Je suis à la recherche urgente d'un stage de 12 semaines dans le milieu du jeu vidéo pour Juin 2025</p>
             </div>
         </div>
     </main>
