ajout page tiktok

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
                 <div class="projet web"><img class="main" id="mangalibrary" src="img/MangaLibrary_logo.png"
                         alt="MangaLibrary">
                 </div>
+                <div class="projet other"><img class="main" id="tiktok" src="img/logo_tiktok.png"
+                    alt="image logo tiktok"></div>
             </div>
         </div>
         <div class="skills" id="skills">
