--- a/index.html
+++ b/index.html
@@ -35,14 +35,11 @@
             <div class="liste_actus">
                 <p class="actus"> Je suis à la recherche urgente d'un stage de 12 semaines dans le milieu du jeu vidéo
                     pour Juin 2025</p>
-                    <p class="actus"> Je recherche également une alternance dans le même milieux pour les années 2025-2026 et 2026-2027</p>
+                <p class="actus"> Je recherche également une alternance dans le même milieu pour les années 2025-2026 et 2026-2027</p>
             </div>
         </div>
         <div class="projects" id="projects">
             <h1>Projets :</h1>
-            <p class="centered">(vous pouvez cliquer sur les images pour plus de détails)</p>
-            <br>
-            <p class="centered">Options de filtrage :</p>
             <div class="filters">
                 <button onclick="filterProjects('all')">Tous</button>
                 <button onclick="filterProjects('prog')">Programmation</button>
@@ -52,81 +49,65 @@
             </div>
             <div class="liste_projets">
                 <div class="projet other"><img class="main" id="blogStage" src="img/BLOG STAGES.png"
-                        alt="images blog stages"></div>
+                        alt="images blog stages">
+                </div>
                 <div class="projet game"><img class="main" id="firstTry" src="img/firstTry.png"
-                        alt="image 1er jeu sous Unreal Engine 5"></div>
-                <div class="projet other"><img class="main" id="twitch" src="img/logo_YK.png" alt="logo chaine twitch">
+                        alt="image 1er jeu sous Unreal Engine 5">
                 </div>
                 <div class="projet web"><img class="main" id="phasmohelp" src="img/Phasmohelp_logo.png"
-                        alt="phasmohelp">
+                            alt="phasmohelp">
                 </div>
                 <div class="projet game"><img class="main" id="vortex" src="img/logo_vortex_png.png" alt="logo vortex">
                 </div>
                 <div class="projet web"><img class="main" id="myconfig" src="img/logo_myconfig.png" alt="logo myConfig">
                 </div>
                 <div class="projet game"><img class="main" id="equilibrium" src="img/equilibrium.png"
-                        alt="logo equilibrium">
+                            alt="logo equilibrium">
                 </div>
                 <div class="projet web"><img class="main" id="blog" src="img/logo_blog.png" alt="blog"></div>
                 <div class="projet prog"><img class="main" id="fakegpt" src="img/FakeGPT.png" alt="FakeGPT"></div>
                 <div class="projet web"><img class="main" id="mangalibrary" src="img/MangaLibrary_logo.png"
-                        alt="MangaLibrary">
+                            alt="MangaLibrary">
                 </div>
                 <div class="projet other"><img class="main" id="tiktok" src="img/logo_tiktok.png"
-                        alt="image logo tiktok"></div>
-                    </div>
+                            alt="image logo tiktok">
+                </div>
+                <div class="projet other"><img class="main" id="twitch" src="img/logo_YK.png" alt="logo chaine twitch">
+                </div>
+            </div>
         </div>
         <div class="skills" id="skills">
             <h1>Mes compétences :</h1>
             <div class="liste_compétences">
-                <div>
-                    <h2> SOFT SKILLS : </h2>
-                    <ul>
-                        <li>
-                            <p>Ordonné</p>
-                        </li>
-                        <li>
-                            <p>Discipliné</p>
-                        </li>
-                        <li>
-                            <p>Calme</p>
-                        </li>
-                        <li>
-                            <p>Polyvalent</p>
-                        </li>
-                    </ul>
+                <div class="img_compétences">
+                    <img src="img/logo_unity.png" alt="logo Unity">
                 </div>
-                <div>
-                    <h2> HARD SKILLS : </h2>
-                    <ul>
-                        <li>
-                            <p>C# (Unity et Monogame)</p>
-                        </li>
-                        <li>
-                            <p>Blueprint Unreal Engine 5</p>
-                        </li>
-                        <li>
-                            <p>Python</p>
-                        </li>
-                        <li>
-                            <p>PHP</p>
-                        </li>
-                        <li>
-                            <p>SQL</p>
-                        </li>
-                        <li>
-                            <p>HTML</p>
-                        </li>
-                        <li>
-                            <p>CSS</p>
-                        </li>
-                        <li>
-                            <p>JavaScript</p>
-                        </li>
-                        <li>
-                            <p>OBS Studio</p>
-                        </li>
-                    </ul>
+                <div class="img_compétences">
+                    <img src="img/logo_monogame.png" alt="logo Monogame">
+                </div>
+                <div class="img_compétences">
+                    <img src="img/logo_unreal.png" alt="logo Unreal Engine">
+                </div>
+                <div class="img_compétences">
+                    <img src="img/logo_python.png" alt="logo Python">
+                </div>
+                <div class="img_compétences">
+                    <img src="img/logo_php.png" alt="logo PHP">
+                </div>
+                <div class="img_compétences">
+                    <img src="img/logo_sql.png" alt="logo SQL">
+                </div>
+                <div class="img_compétences">
+                    <img src="img/logo_html.png" alt="logo HTML">
+                </div>
+                <div class="img_compétences">
+                    <img src="img/logo_css.svg" alt="logo CSS">
+                </div>
+                <div class="img_compétences">
+                    <img src="img/logo_JS.png" alt="logo javascript">
+                </div>
+                <div class="img_compétences">
+                    <img src="img/logo_obs.png" alt="logo obs">
                 </div>
             </div>
         </div>
@@ -142,10 +123,8 @@
                 <p>Je suis également passionné par le Japon, que ce soit les traditions ou les mythes et légendes en
                     passant par l'animation japonaise et les mangas.</p>
                 <p>J'ai une collection de minéraux car je voulais devenir géologue lorsque j'était plus jeune.</p>
-                <p>J'ai aussi une collection de couteau mais uniquement car j'aime le contraste entre leurs beauté et
-                    leurs dangerosité</p>
                 <p>Je fais du théâtre en amateur depuis 2020</p>
-                <p>Trois petites icones sont disponibles dans le bas de pages à coté de mes informations de contact :
+                <p>Quatres petites icones sont disponibles dans le bas de pages à coté de mes informations de contact :
                 </p>
                 <ul>
                     <li>
