modif page phasmohelp

--- a/phasmohelp.html
+++ b/phasmohelp.html
@@ -20,12 +20,13 @@
         <div class="about">
             <h1>Qu'est-ce que ce projet ?</h1>
             <div class="description">
-                <p>Le projet consiste simplement en un site pouvant nous aider dans nos recherches.</p>
-                <p>Le site repertorie des informations sur les 24 entités disponibles dans le jeu.</p>
+                <p>Le projet est un site pouvant nous aider dans nos recherches sur le jeu vidéo Phasmophobia.</p>
+                <p>Le site répertorie des informations sur les 24 entités disponibles dans le jeu.</p>
                 <p>Quelques informations générales sont disponibles également.</p>
                 <p>Je me suis fortement inspiré du site cité en source pour faire le miens.</p>
-                <p>L'idée m'est venue car je trouvais que les informations données par le site n'était pas assez
+                <p>L'idée m'est venue car je trouvais que les informations données par le site sourcé n'étaient pas assez
                     concises et parfois pas rapidement compréhensibles.</p>
+                <a id="lienSitePhasmo" href="https://yankeez62.github.io/PhasmoHelp/">Lien vers le site</a>
                 <p>-> source : <a
                         href="https://tybayn.github.io/phasmo-cheat-sheet/">https://tybayn.github.io/phasmo-cheat-sheet/</a>
                 </p>
@@ -34,10 +35,9 @@
         <div class="projects" id="projects">
             <h1>Quelques images du projet :</h1>
             <div class="liste_img_projets">
-                <div class="projet"><img src="img/phasmohelp_background.jpg" alt="background du site"></div>
-                <div class="projet"><img src="img/Phasmohelp_card.png" alt="exemple d'une des 24 cartes"></div>
+                <div class="img_projet"><img src="img/phasmohelp_background.jpg" alt="background du site"></div>
+                <div class="img_projet"><img src="img/Phasmohelp_card.png" alt="exemple d'une des 24 cartes"></div>
             </div>
-            <a id="lienSitePhasmo" href="https://yankeez62.github.io/PhasmoHelp/">Lien vers le site</a>
         </div>
     </main>
     <footer>
