modif images de projets

--- a/equilibrium.html
+++ b/equilibrium.html
@@ -34,14 +34,14 @@
         <div class="projects" id="projects">
             <h1>Quelques images du projet :</h1>
             <div class="liste_img_projets">
-                <div class="projet"><img id="accueil" src="img/equ_accueil.png" alt="écran d'accueil"></div>
-                <div class="projet"><img id="joyaux" src="img/diamonds-clipart-9.png" alt="joyaux"></div>
-                <div class="projet"><img id="spawn" src="img/equ_spawn.png" alt="spawn"></div>
-                <div class="projet"><img id="mort" src="img/equ_death.png" alt="écran de mort"></div>
-                <div class="projet"><img id="event" src="img/equ_event.png"
+                <div class="img_projet"><img id="accueil" src="img/equ_accueil.png" alt="écran d'accueil"></div>
+                <div class="img_projet"><img id="joyaux" src="img/diamonds-clipart-9.png" alt="joyaux"></div>
+                <div class="img_projet"><img id="spawn" src="img/equ_spawn.png" alt="spawn"></div>
+                <div class="img_projet"><img id="mort" src="img/equ_death.png" alt="écran de mort"></div>
+                <div class="img_projet"><img id="event" src="img/equ_event.png"
                         alt="évènement lors du 8 ème joyaux récupéré">
                 </div>
-                <div class="projet"><img id="win" src="img/equ_win.png" alt="écran de victoire"></div>
+                <div class="img_projet"><img id="win" src="img/equ_win.png" alt="écran de victoire"></div>
             </div>
         </div>
     </main>
