--- a/fakegpt.html
+++ b/fakegpt.html
@@ -33,7 +33,7 @@
         <div class="projects" id="projects">
             <h1> Image de l'appli :</h1>
             <div class="liste_img_projets">
-                <div class="projet"><img id="application" src="img/FakeGPT_app.png" alt="application"></div>
+                <div class="img_projet"><img id="application" src="img/FakeGPT_app.png" alt="application"></div>
             </div>
         </div>
         </div>
