--- a/mangalibrary.html
+++ b/mangalibrary.html
@@ -30,9 +30,9 @@
         <div class="projects" id="projects">
             <h1> Images du mini projet :</h1>
             <div class="liste_img_projets">
-                <div class="projet"><img id="arrivée" src="img/MangaLibrary_accueil.png" alt="arrivée"></div>
-                <div class="projet"><img id="liste" src="img/MangaLibrary_liste.png" alt="liste par défaut"></div>
-                <div class="projet"><img id="vue" src="img/MangaLibrary_global.png" alt="vue globale"></div>
+                <div class="img_projet"><img id="arrivée" src="img/MangaLibrary_accueil.png" alt="arrivée"></div>
+                <div class="img_projet"><img id="liste" src="img/MangaLibrary_liste.png" alt="liste par défaut"></div>
+                <div class="img_projet"><img id="vue" src="img/MangaLibrary_global.png" alt="vue globale"></div>
             </div>
         </div>
         </div>
