--- a/myconfig.html
+++ b/myconfig.html
@@ -30,10 +30,10 @@
         <div class="projects" id="projects">
             <h1>Quelques images du projet :</h1>
             <div class="liste_img_projets">
-                <div class="projet"><img id="accueil" src="img/myConfig_page_accueil.png" alt="accueil"></div>
-                <div class="projet"><img id="config" src="img/myConfig_page_config.png" alt="page de config"></div>
-                <div class="projet"><img id="accueil" src="img/myConfig_page_guides.png" alt="guides"></div>
-                <div class="projet"><img id="accueil" src="img/myConfig_page_connexion.png" alt="page de connexion">
+                <div class="img_projet"><img id="accueil" src="img/myConfig_page_accueil.png" alt="accueil"></div>
+                <div class="img_projet"><img id="config" src="img/myConfig_page_config.png" alt="page de config"></div>
+                <div class="img_projet"><img id="accueil" src="img/myConfig_page_guides.png" alt="guides"></div>
+                <div class="img_projet"><img id="accueil" src="img/myConfig_page_connexion.png" alt="page de connexion">
                 </div>
             </div>
         </div>
