--- a/twitch.html
+++ b/twitch.html
@@ -31,13 +31,13 @@
         <div class="projects" id="projects">
             <h1>Quelques images du projet :</h1>
             <div class="liste_img_projets">
-                <div class="projet_custom"><img id="accueil" src="img/banner-ff.png" alt="bannière"></div>
-                <div class="projet"><img id="accueil" src="img/bouton-apropos.png" alt="bouton 'à propos'"></div>
-                <div class="projet"><img id="config" src="img/bouton-discord.png" alt="bouton 'discord'"></div>
-                <div class="projet"><img id="accueil" src="img/bouton-don.png" alt="bouton de don"></div>
-                <div class="projet"><img id="accueil" src="img/bouton-regles.png" alt="bouton règles"></div>
-                <div class="projet"><img id="accueil" src="img/bouton-setup.png" alt="bouton 'setup'"></div>
-                <div class="projet"><img id="accueil" src="img/bouton-twitter.png" alt="bouton 'twitter'"></div>
+                <div class="img_projet_custom"><img id="accueil" src="img/banner-ff.png" alt="bannière"></div>
+                <div class="img_projet"><img id="accueil" src="img/bouton-apropos.png" alt="bouton 'à propos'"></div>
+                <div class="img_projet"><img id="config" src="img/bouton-discord.png" alt="bouton 'discord'"></div>
+                <div class="img_projet"><img id="accueil" src="img/bouton-don.png" alt="bouton de don"></div>
+                <div class="img_projet"><img id="accueil" src="img/bouton-regles.png" alt="bouton règles"></div>
+                <div class="img_projet"><img id="accueil" src="img/bouton-setup.png" alt="bouton 'setup'"></div>
+                <div class="img_projet"><img id="accueil" src="img/bouton-twitter.png" alt="bouton 'twitter'"></div>
             </div>
         </div>
     </main>
