--- a/vortex.html
+++ b/vortex.html
@@ -36,17 +36,17 @@
         <div class="projects" id="projects">
             <h1>Quelques images du projet :</h1>
             <div class="liste_img_projets">
-                <div class="projet"><img id="logo" src="img/logo_vortex-bg.png" alt="logo"></div>
-                <div class="projet"><img id="load_screen" src="img/vortex_load_screen.png" alt="écran de chargement">
+                <div class="img_projet"><img id="logo" src="img/logo_vortex-bg.png" alt="logo"></div>
+                <div class="img_projet"><img id="load_screen" src="img/vortex_load_screen.png" alt="écran de chargement">
                 </div>
-                <div class="projet"><img id="accueil" src="img/vortex_accueil_screen.png" alt="écran d'accueil"></div>
-                <div class="projet"><img id="campaign" src="img/vortex_campaign_screen.png"
+                <div class="img_projet"><img id="accueil" src="img/vortex_accueil_screen.png" alt="écran d'accueil"></div>
+                <div class="img_projet"><img id="campaign" src="img/vortex_campaign_screen.png"
                         alt="écran en mode campagne"></div>
-                <div class="projet"><img id="question_exemple" src="img/vortex_question_exemple_screen.png"
+                <div class="img_projet"><img id="question_exemple" src="img/vortex_question_exemple_screen.png"
                         alt="exemple d'une question"></div>
-                <div class="projet"><img id="freemode" src="img/vortex_freemode_screen.png" alt="écran du mode libre">
+                <div class="img_projet"><img id="freemode" src="img/vortex_freemode_screen.png" alt="écran du mode libre">
                 </div>
-                <div class="projet"><img id="shop" src="img/vortex_shop_screen.png" alt="écran de boutique"></div>
+                <div class="img_projet"><img id="shop" src="img/vortex_shop_screen.png" alt="écran de boutique"></div>
             </div>
         </div>
     </main>
