modif page twitch

--- a/twitch.html
+++ b/twitch.html
@@ -20,12 +20,9 @@
         <div class="about">
             <h1>Qu'est-ce que ce projet ?</h1>
             <div class="description">
-                <p>En addition avec les cours et le développement j'ai pour projet de faire une chaine twitch orienté
-                    vers ma première passion qui est le jeu vidéo.</p>
-                <p>Ce projet n'a rien à voir avec tout les autres mais me permet d'avoir quelques petites notions en
+                <p>En addition avec les cours et le développement j'ai une chaine twitch orientée vers le jeu vidéo.</p>
+                <p>Ce projet me permet d'avoir quelques petites notions en
                     matière de gestion du son ou encore apprendre un autre type de logiciel.</p>
-                <p>Ce projet est en standby pour le moment mais j'espère pouvoir le reprendre prochainement (en plus du
-                    travail évidemment).</p>
             </div>
         </div>
         <div class="projects" id="projects">
