modif page vortex

--- a/vortex.html
+++ b/vortex.html
@@ -24,7 +24,7 @@
                 <p>Le projet avait pour but de créer un jeu de quiz disponible sur mobile.</p>
                 <p>J'ai colaboré avec 3 autres étudiants pour faire le jeu : 1 étudiante en filière "Audiovisuel" et 2
                     étudiants en filière "Animation 3D et Jeux vidéo"</p>
-                <p>Le jeu à pu être terminé et il est fonctionnel malgré quelque petit bugs</p>
+                <p>Le jeu à pû être terminé et il est fonctionnel</p>
                 <p>C'est le projet dont je suis le plus fier car c'est le premier qui m'a demandé autant de travail.</p>
                 <p>Tout ce qui est en rapport avec le visuel à été fait par les étudiants en "Animation 3D et jeux
                     vidéo".</p>
