modif page equilibrium

--- a/equilibrium.html
+++ b/equilibrium.html
@@ -27,7 +27,7 @@
                 <p> Le but du jeu est de récupérer les 9 joyaux disséminés un peu partout sur la carte.</p>
                 <p> Le jeu n'a pas d'histoire à proprement parler, il suffit de traverser les obstacles et récupérer les
                     joyaux.</p>
-                <p> Les graphismes ne sont pas extraordinaires du tout mais je voulais faire un jeu fonctionnel plus que
+                <p> Mon but était que je voulais faire un jeu fonctionnel plus que
                     beau.</p>
             </div>
         </div>
