modif page tiktok

--- a/tiktok.html
+++ b/tiktok.html
@@ -20,7 +20,7 @@
         <div class="about">
             <h1>Qu'est-ce que ce projet ?</h1>
             <div class="description">
-                <p>Comme dit précedemment, je fais du théâtre en amateur dpuis 2020 environ et j'ai découvert en
+                <p>Je fais du théâtre en amateur depuis 2020 environ et j'ai découvert en
                     parrallèle le doublage et celui ci me passionne.</p>
                 <p>Dans ce sens, j'ai décidé en fin 2024 de revenir sur TikTok et produire un contenu orienté vers cette
                     nouvelle passion.</p>
