modif page mangaLibrary

--- a/mangalibrary.html
+++ b/mangalibrary.html
@@ -21,7 +21,7 @@
             <h1>Qu'est-ce que ce projet ?</h1>
             <div class="description">
                 <p>Ce mini projet consistait en la création d'une petite bibliothèque de manga créée en TypeScript.</p>
-                <p>Le projet est fonctionnel mais uniquement en local. Cet a dire que les données sont sur un fichier
+                <p>Le projet est fonctionnel uniquement en local. Cet a dire que les données sont sur un fichier
                     interne.</p>
                 <p>Lorsque l'on rafraichi la page, la liste se réinitialise avec des valeurs par défaut.</p>
                 <p>Le site à entièrement été fait en anglais</p>
