modif page myconfig

--- a/myconfig.html
+++ b/myconfig.html
@@ -20,11 +20,9 @@
         <div class="about">
             <h1>Qu'est-ce que ce projet ?</h1>
             <div class="description">
-                <p>Ce petit projet avait pour but de créer un site de configuration de PC.</p>
+                <p>Ce petit projet avait pour but de créer une maquette pour un site de configuration de PC.</p>
                 <p>Le projet était le premier que nous avons eu à faire à Ynov avec l'aide de 3 camarades étudiants en
                     informatique.</p>
-                <p>Le site n'a pas été terminé et est resté à l'état de prototype.</p>
-                <p>Le site n'était pas fonctionnel non plus, seulement le visuel à été fait.</p>
             </div>
         </div>
         <div class="projects" id="projects">
