modif page blog

--- a/blog.html
+++ b/blog.html
@@ -26,16 +26,16 @@
                     pour
                     ajouter un post.
                 </p>
-                <p>En cliquant sur le lien pour accéder à la page d'administration, on arrive sur une page de connexion
+                <p>En cliquant sur le lien pour aller à la page d'administration, on arrive sur une page de connexion
                     afin
-                    d'arriver à la page.</p>
+                    d'accéder à la page.</p>
                 <p>Une fois sur la page d'administration, on retrouve les différents posts ainsi que 3 boutons pour
                     ajouter,
                     modifier ou supprimer un post.
                 </p>
                 <p>Sur la page d'accueil, nous pouvons également cliquer sur le titre d'un poste pour voir son contenu
                     complet, son auteur et la date de création.</p>
-                <p>Lorsque nous avons cliquer pour voir le contenu complet d'un post, nous pouvons ajouter un
+                <p>Lorsque nous avons cliqué pour voir le contenu complet d'un post, nous pouvons ajouter un
                     commentaire à
                     celui-ci</p>
             </div>
