ajout fond animé avec particule

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </head>
     
     <body>
+        <canvas id="particleCanvas"></canvas>
         <header>
             <h1 class="AnimMachine">MAXIME BAUSSANT</h1>
             <button class="hamburger" id="hamburger" aria-label="Menu" aria-controls="menu">
